<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text_insert_pin"
        android:layout_alignParentTop="true"
        android:text="@string/text_insert_pin"
        android:layout_marginTop="@dimen/base_margin_moderate"
        android:paddingStart="@dimen/base_padding_half"
        android:paddingEnd="@dimen/base_padding_half"
        style="@style/TitleText"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/button_forgot_pin"
        android:layout_below="@id/text_insert_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="@dimen/text_caption_size"
        android:text="@string/forgot_your_pin"  />


    <me.philio.pinentry.PinEntryView
        android:id="@+id/edit_text_sms_verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_forgot_pin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/base_margin_moderate"
        android:inputType="numberPassword"
        app:digitWidth="45dp"
        app:digitHeight="45dp"
        app:digitSpacing="4dp"
        app:accentType="character"
        app:pinInputType="number"
        app:mask="●"
        app:numDigits="6"
        app:digitTextSize="10sp"
        app:digitBackground="@color/blue_background"
        app:digitTextColor="@android:color/white"/>

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/base_padding_half"
        android:text="@string/text_action_cancel"
        android:textColor="@color/white"
        android:textStyle="bold" />


</RelativeLayout>


