<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/ConstraintLayoutWithPadding"
    android:layout_marginBottom="@dimen/base_margin"
    >

    <TextView
        android:id="@+id/text_successful_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_successful"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/image_change_pin_successful"
        android:textColor="@color/green_grass"
        style="@style/TitleText"
        />

    <ImageView
        android:id="@+id/image_change_pin_successful"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_account_check_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_successful_message"
        app:layout_constraintBottom_toTopOf="@+id/text_successful_desc"
        android:layout_marginBottom="@dimen/base_margin_moderate"
        />

    <TextView
        android:id="@+id/text_successful_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/image_change_pin_successful"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/layout_detail"
        android:text="@string/text_change_pin_succeed_info"
        android:layout_marginBottom="@dimen/base_margin_moderate"
        />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_successful_desc"
        app:layout_constraintBottom_toTopOf="@+id/button_ok"
        style="@style/ConstraintLayoutWithPadding"
        android:background="@color/blue_background">

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            android:text="@string/text_change_pin_succeed_info_desc"
            android:textColor="@color/colorPrimaryDark"
            />


    </android.support.constraint.ConstraintLayout>

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/button_ok"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        app:fb_borderColor="#FFFFFF"
        app:fb_borderWidth="1dp"
        app:fb_defaultColor="#7ab800"
        app:fb_focusColor="#9bd823"
        app:fb_fontIconResource="&#xf04b;"
        app:fb_iconPosition="left"
        app:fb_radius="30dp"
        app:fb_text="@string/action_ok"
        app:fb_textColor="#FFFFFF" />

</android.support.constraint.ConstraintLayout>