<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <android.support.v7.widget.CardView
        android:id="@+id/card_merchant_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_margin_half"
        android:layout_marginEnd="@dimen/base_margin_half"
        >

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layout_layout_merchant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/base_margin_half"
            android:background="@color/white"
            >


            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_create_pin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textColorHint="@color/colorPrimary"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_text_create_pin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_insert_pin"
                    android:inputType="numberPassword"
                    android:maxLength="6" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_repeat_create_pin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_create_pin"
                android:textColorHint="@color/colorPrimary"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_text_recreate_pin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="6"
                    android:hint="@string/text_insert_pin_repeat"
                    android:inputType="numberPassword"
                    />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/text_create_pin_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_info_create_pin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_repeat_create_pin"
                android:gravity="center"
                />

            <Button
                android:id="@+id/button_register"
                style="@style/LongRoundedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/text_create_pin_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="@dimen/base_margin"
                android:text="@string/action_register"
                android:textStyle="bold"
                />


        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>